@@ -51,6 +51,7 @@ use parent 'Common::Object';
   - nocreate: Do not create file if it doesn't already exist (throws a fatal error instead)
   - nofail: Do not throws fatal error in case configuration file doesn't exist
   - readonly: Sets a read-only access on the tied configuration file
+  - temporary: Enable temporary overriding of configuration values ( changes are not persistent )
 
 =cut
 
@@ -205,7 +206,7 @@ sub STORE
 {
 	my ($self, $paramName, $value) = @_;
 
-	unless($self->{'readonly'}) {
+	unless($self->{'readonly'} && ! $self->{'temporary'}) {
 		unless(exists $self->{'configValues'}->{$paramName}) {
 			$self->_insertConfig($paramName, $value);
 		} else {
@@ -297,7 +298,10 @@ sub _replaceConfig
 
 	$value = '' unless defined $value;
 
-	@{$self->{'confFile'}}[$self->{'lineMap'}->{$paramName}] = "$paramName = $value";
+	unless($self->{'temporary'}) {
+		@{$self->{'confFile'}}[$self->{'lineMap'}->{$paramName}] = "$paramName = $value";
+	}
+
 	$self->{'configValues'}->{$paramName} = $value;
 }
 
